--- a/manuscript/kuro.bib
+++ b/manuscript/kuro.bib
@@ -41,3 +41,12 @@
   year={2018},
   publisher={Elsevier}
 }
+
+@article{maurer2021delayed,
+  title={Delayed-mode quality control of oxygen, nitrate, and pH data on SOCCOM biogeochemical profiling floats},
+  author={Maurer, Tanya L and Plant, Joshua N and Johnson, Kenneth S},
+  journal={Frontiers in Marine Science},
+  pages={1118},
+  year={2021},
+  publisher={Frontiers}
+}
