--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -73,7 +73,7 @@ Nutricline estimates from continuous profiles rather than discrete data points
 \section{Data and Methods}
 \subsections{BGC-Argo float data}
 List float numbers and duration of deployment
-Mention additional QA/QC on float data
+Mention additional QA/QC on float data \citep{maurer2021delayed}
 
 Figure 1. Data density in time/space (map showing float trajectories and number of profiles in 5x5 dgree boxes, histogram showing prfolies by month of year)
 
@@ -111,7 +111,7 @@ LOL
 
 \bibliographystyle{frontiersinSCNS_ENG_HUMS} 
 
-\bibliography{test}
+\bibliography{kuro}
 
 %%% Make sure to upload the bib file along with the tex file and PDF
 %%% Please see the test.bib file for some examples of references
