added Richardson ref and more to intro

--- a/manuscript/kuro.bib
+++ b/manuscript/kuro.bib
@@ -10,6 +10,15 @@
   publisher={Wiley Online Library}
 }
 
+@article{richardson2019vertical,
+  title={Vertical distribution of phytoplankton and primary production in relation to nutricline depth in the open ocean},
+  author={Richardson, Katherine and Bendtsen, J{\o}rgen},
+  journal={Marine Ecology Progress Series},
+  volume={620},
+  pages={33--46},
+  year={2019}
+}
+
 @article{clayton2014fine,
   title={Fine scale phytoplankton community structure across the Kuroshio Front},
   author={Clayton, Sophie and Nagai, Takeyoshi and Follows, Michael J},
