--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -44,8 +44,7 @@
 \onecolumn
 \firstpage{1}
 
-\title{Spatial and temporal variability in nutricline depth and nitrate fluxes in the Kuroshio and Oyashio Extensions from BGC-Argo profiles
-} 
+\title{Spatial and temporal variability in nutricline depth and nitrate fluxes in the Kuroshio and Oyashio Extensions from BGC-Argo profiles} 
 
 \author[\firstAuthorLast]{\Authors} %This field will be automatically populated
 \address{} %This field will be automatically populated
@@ -67,6 +66,9 @@ The depth of the nutricline and the magnitude of vertical nutrient fluxes have a
 \end{abstract}
 
 \section{Introduction}
+Nutricline depth can be used as a proxy for nutrient availability as it scales with the mixed layer integrated nutrient supply (add in equation here to show how deeper nutricline results in decreased MLD averaged nutrient supply?)
+
+Importance of nutricline depth in setting rates or primary production \citep{richardson2019vertical}
 
 Nutricline estimates from continuous profiles rather than discrete data points
 
@@ -84,7 +86,7 @@ Which criterion to use?
 Dissipation rate estimation using Thorpe scale method (refer to Whalen et al. 2012 and Han et a;., 2021)
 
 
-section{Results}
+\section{Results}
 
 
 
