worked on methods section and added refs

--- a/manuscript/kuro.bib
+++ b/manuscript/kuro.bib
@@ -59,3 +59,11 @@
   year={2021},
   publisher={Frontiers}
 }
+
+@article{argo2022,
+  title = {Argo float data and metadata from Global Data Assembly Centre (Argo GDAC) - Snapshot of Argo GDAC of February 10st 2022.},
+  journal = {SEANOE},
+  year = {2022},
+  author = {Argo},
+  doi = {https://doi.org/10.17882/42182#91554}
+}
