--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -44,7 +44,7 @@
 \onecolumn
 \firstpage{1}
 
-\title{Spatial and temporal variability in nutricline depth and nitrate fluxes in the Kuroshio and Oyashio Extensions from BGC-Argo profiles} 
+\title{Spatial and temporal variability in nutricline depth and impact on net primary production in the Kuroshio and Oyashio Extensions from BGC-Argo profiles} 
 
 \author[\firstAuthorLast]{\Authors} %This field will be automatically populated
 \address{} %This field will be automatically populated
@@ -54,7 +54,7 @@
 
 
 \begin{abstract}
-The depth of the nutricline and the magnitude of vertical nutrient fluxes have a direct influence on primary productivity and the strength of the biological carbon pump. Western boundary currents have been shown to be hotspots for carbon cycling, largely due to their high levels of eddy kinetic energy superimposed over large latitudinal gradients in physical and biogeochemical properties. The presence of mesoscale eddies and submesoscale filaments drives variability in the mixed layer and the nutricline depth over a wide range of space and time scales. The Kuroshio and Oyashio have been shown to act as large-scale subsurface nutrient streams, supporting large lateral transports of nutrients within the upper thermocline, and these nutrient streams are characterized by persistent along-isopycnal positive nitrate anomalies. However the extent of the spatial and temporal variability of the nutricline depth in the north western Pacific is not well known, partly due to the relatively sparse number of nutrient profiles over the broader region. In this study, data from a large number of continuous nitrate profiles from BGC-Argo floats deployed in the western Pacific, spanning multiple years and seasons, are used to determine temporal and spatial variability in the nutricline depth and nitrate fluxes, and how they relate to physical dynamics and primary productivity estimated from remote sensing.
+The depth of the nutricline and the magnitude of vertical nutrient fluxes have a direct influence on primary productivity and the strength of the biological carbon pump. Western boundary currents have been shown to be hotspots for carbon cycling, largely due to their high levels of eddy kinetic energy superimposed over large latitudinal gradients in physical and biogeochemical properties. The presence of mesoscale eddies and submesoscale filaments drives variability in the mixed layer and the nutricline depth over a wide range of space and time scales. The Kuroshio and Oyashio have been shown to act as large-scale subsurface nutrient streams, supporting large lateral transports of nutrients within the upper thermocline, and these nutrient streams are characterized by persistent along-isopycnal positive nitrate anomalies. However the extent of the spatial and temporal variability of the nutricline depth in the north western Pacific is not well known, partly due to the relatively sparse number of nutrient profiles over the broader region. In this study, data from a large number of continuous nitrate profiles from BGC-Argo floats deployed in the western Pacific, spanning multiple years and seasons, are used to determine temporal and spatial variability in the nutricline depth and how they relate to physical dynamics and primary productivity estimated from remote sensing.
 
 
 \section{}
@@ -62,7 +62,7 @@ The depth of the nutricline and the magnitude of vertical nutrient fluxes have a
 
 
 \tiny
- \keyFont{ \section{Keywords:} keyword, keyword, keyword, keyword, keyword, keyword, keyword, keyword} %All article types: you may provide up to 8 keywords; at least 5 are mandatory.
+ \keyFont{ \section{Keywords:} western boundary currents, nitrate, nutricline, upper ocean processes, , primary production, Kuroshio} %All article types: you may provide up to 8 keywords; at least 5 are mandatory.
 \end{abstract}
 
 \section{Introduction}
@@ -72,22 +72,52 @@ Importance of nutricline depth in setting rates or primary production \citep{ric
 
 Nutricline estimates from continuous profiles rather than discrete data points
 
-\section{Data and Methods}
-\subsections{BGC-Argo float data}
-List float numbers and duration of deployment
-Mention additional QA/QC on float data \citep{maurer2021delayed}
+\citep{clayton2021synoptic}
 
-Figure 1. Data density in time/space (map showing float trajectories and number of profiles in 5x5 dgree boxes, histogram showing prfolies by month of year)
+\section{Data and Methods}
+\subsection{BGC-Argo float data}
+List float numbers, sensors included and duration of deployment
+
+\begin{table}[]
+\caption{Float information for BGC-Argo floats used in this study.}
+\begin{tabular}{|c|c|l|l|l|c|}
+\hline
+WMO number & DAC & BGC-sensors &Start date  &End date & \# profiles\\
+\hline
+2902754 &  &  &  &  & \\
+2902755 &  &  &  &  & \\
+2903329 &  &  &  &  & \\
+2903330 & & & & & \\
+2903394 & & & & & \\
+2903396 & & & & & \\
+2903672 & & & & & \\
+5904034 & & & & & \\
+5904035 & & & & & \\
+\hline
+\end{tabular}
+\label{floats}
+\end{table}
+Float data for the floats shown in \ref{floats} were downloaded and can be accessed from  the Argo GDAC \citep{argo2022}
+
+
+QA/QC on float data \citep{maurer2021delayed}
+
+Figure 1. Data density in time/space (map showing float trajectories and number of profiles in 1x1 degree boxes, histogram showing prfolies by month of year)
 
 \subsection{Nutricline estimation}
 Which criterion to use? 
 
 \subsection{Nitrate flux estimates}
-Dissipation rate estimation using Thorpe scale method (refer to Whalen et al. 2012 and Han et a;., 2021)
+Dissipation rate estimation using Thorpe scale method (refer to Whalen et al. 2012 and Han et al., 2021)
 
 
 \section{Results}
+\subsection{Nutricline depths}
+compare to WOA-deried nutriclines... is there a consistent trend in the difference between argo nutricline and WOA nutricline? (not sure this makes sense necessarily)
 
+\subsection{Relationship between nutricline depth and SSH}
+
+\subsection{Relationship between nutricline depth and satellite NPP}
 
 
 \section{Discussion}
@@ -109,7 +139,7 @@ The Author Contributions section is mandatory for all articles, including articl
 LOL
 
 \section*{Acknowledgments}
-
+The BGC-Argo float data used in this study were collected and made freely available by the International Argo Program and the national programs that contribute to it (\href{http://www.argo.ucsd.edu}{http://www.argo.ucsd.edu},  \href{http://argo.jcommops.org}{http://argo.jcommops.org}). The Argo Program is part of the Global Ocean Observing System. The data used in this study can be accessed using the following DOI: \href{http://doi.org/10.17882/42182#91554}{http://doi.org/10.17882/42182#91554}
 
 \bibliographystyle{frontiersinSCNS_ENG_HUMS} 
 
