updated with new refs and reworked outline

--- a/manuscript/kuro.bib
+++ b/manuscript/kuro.bib
@@ -1,5 +1,5 @@
 @article{clayton2021synoptic,
-  title={Synoptic mesoscale to basin scale variability in biological productivity and chlorophyll in the Kuroshio Extension region},
+  title={{Synoptic mesoscale to basin scale variability in biological productivity and chlorophyll in the Kuroshio Extension region}},
   author={Clayton, Sophie and Palevsky, Hilary I and Thompson, LuAnne and Quay, Paul D},
   journal={Journal of Geophysical Research: Oceans},
   volume={126},
@@ -20,7 +20,7 @@
 }
 
 @article{clayton2014fine,
-  title={Fine scale phytoplankton community structure across the Kuroshio Front},
+  title={{Fine scale phytoplankton community structure across the Kuroshio Front}},
   author={Clayton, Sophie and Nagai, Takeyoshi and Follows, Michael J},
   journal={Journal of Plankton Research},
   volume={36},
@@ -31,7 +31,7 @@
 }
 
 @article{inoue2016western,
-  title={Western North Pacific integrated physical-biogeochemical ocean observation experiment (INBOX): Part 2. Biogeochemical responses to eddies and typhoons revealed from the S1 mooring and shipboard measurements},
+  title={{Western North Pacific integrated physical-biogeochemical ocean observation experiment (INBOX): Part 2. Biogeochemical responses to eddies and typhoons revealed from the S1 mooring and shipboard measurements}},
   author={Inoue, Ryuichiro and Honda, Makio C and Fujiki, Tetsuichi and Matsumoto, Kazuhiko and Kouketsu, Shinya and Suga, Toshio and Saino, Toshiro},
   journal={Journal of Marine Research},
   volume={74},
@@ -42,7 +42,7 @@
 }
 
 @article{bushinsky2018biological,
-  title={Biological and physical controls on the oxygen cycle in the Kuroshio Extension from an array of profiling floats},
+  title={{Biological and physical controls on the oxygen cycle in the Kuroshio Extension from an array of profiling floats}},
   author={Bushinsky, Seth M and Emerson, Steven R},
   journal={Deep Sea Research Part I: Oceanographic Research Papers},
   volume={141},
@@ -52,7 +52,7 @@
 }
 
 @article{maurer2021delayed,
-  title={Delayed-mode quality control of oxygen, nitrate, and pH data on SOCCOM biogeochemical profiling floats},
+  title={{Delayed-mode quality control of oxygen, nitrate, and pH data on SOCCOM biogeochemical profiling floats}},
   author={Maurer, Tanya L and Plant, Joshua N and Johnson, Kenneth S},
   journal={Frontiers in Marine Science},
   pages={1118},
@@ -61,9 +61,20 @@
 }
 
 @article{argo2022,
-  title = {Argo float data and metadata from Global Data Assembly Centre (Argo GDAC) - Snapshot of Argo GDAC of February 10st 2022.},
+  title = {{Argo float data and metadata from Global Data Assembly Centre (Argo GDAC) - Snapshot of Argo GDAC of February 10st 2022.}},
   journal = {SEANOE},
   year = {2022},
   author = {Argo},
   doi = {https://doi.org/10.17882/42182#91554}
+}
+
+@article{omand2015shape,
+  title={The shape of the oceanic nitracline},
+  author={Omand, Melissa M and Mahadevan, Amala},
+  journal={Biogeosciences},
+  volume={12},
+  number={11},
+  pages={3273--3287},
+  year={2015},
+  publisher={Copernicus GmbH}
 }
