--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -44,7 +44,7 @@
 \onecolumn
 \firstpage{1}
 
-\title{Spatial and temporal variability in nutricline depth and impact on net primary production in the Kuroshio and Oyashio Extensions from BGC-Argo profiles} 
+\title{Spatial and temporal variability in nutricline depth in the Kuroshio and Oyashio Extensions from BGC-Argo floats} 
 
 \author[\firstAuthorLast]{\Authors} %This field will be automatically populated
 \address{} %This field will be automatically populated
@@ -70,13 +70,20 @@ Nutricline depth can be used as a proxy for nutrient availability as it scales w
 
 Importance of nutricline depth in setting rates or primary production \citep{richardson2019vertical}
 
+Kuroshio has variability in nutricline due to a range of processes \citep{clayton2021synoptic}
+
+Previous study looking at large scale patterns in nitracline depth and shape \citep{omand2015shape}... not here is a lot more data around to take a more detailed look at spatiala dn temporal variability in the nitracline in the Kuroshio Extension region thanks to more BGC-Argo floats being deployed over the last few years...
+
 Nutricline estimates from continuous profiles rather than discrete data points
 
-\citep{clayton2021synoptic}
+Questions to be answered: 
+- how does the nutricline depth and density level vary seasonally?
+- does the mean depth of the nutricline shoal as you move downstream along the Kuroshio?
 
 \section{Data and Methods}
 \subsection{BGC-Argo float data}
 List float numbers, sensors included and duration of deployment
+- this is not looking as QA/QC'd files are ugly
 
 \begin{table}[]
 \caption{Float information for BGC-Argo floats used in this study.}
@@ -107,8 +114,8 @@ Figure 1. Data density in time/space (map showing float trajectories and number 
 \subsection{Nutricline estimation}
 Which criterion to use? 
 
-\subsection{Nitrate flux estimates}
-Dissipation rate estimation using Thorpe scale method (refer to Whalen et al. 2012 and Han et al., 2021)
+% \subsection{Nitrate flux estimates}
+% Dissipation rate estimation using Thorpe scale method (refer to Whalen et al. 2012 and Han et al., 2021)
 
 
 \section{Results}
@@ -132,11 +139,10 @@ compare to WOA-deried nutriclines... is there a consistent trend in the differen
 The author declares that the research was conducted in the absence of any commercial or financial relationships that could be construed as a potential conflict of interest.
 
 \section*{Author Contributions}
-
-The Author Contributions section is mandatory for all articles, including articles by sole authors. If an appropriate statement is not provided on submission, a standard one will be inserted during the production process. The Author Contributions statement must describe the contributions of individual authors referred to by their initials and, in doing so, all authors agree to be accountable for the content of the work. Please see  \href{http://home.frontiersin.org/about/author-guidelines#AuthorandContributors}{here} for full authorship criteria.
+SC conceived the study, performed the analyses and prepared the manuscript.
 
 \section*{Funding}
-LOL
+
 
 \section*{Acknowledgments}
 The BGC-Argo float data used in this study were collected and made freely available by the International Argo Program and the national programs that contribute to it (\href{http://www.argo.ucsd.edu}{http://www.argo.ucsd.edu},  \href{http://argo.jcommops.org}{http://argo.jcommops.org}). The Argo Program is part of the Global Ocean Observing System. The data used in this study can be accessed using the following DOI: \href{http://doi.org/10.17882/42182#91554}{http://doi.org/10.17882/42182#91554}
